[package]
name = "banzhu-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.93.4", features = ["imgcodecs"]}
regex = "1.11.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["json", "stream","cookies","zstd"] }
futures = "0.3.31"
config = "0.14.1"
tokio = { version = "1.41.1", features = ["full"] }
pbr = "1.1.1"
rand = "0.9.0-alpha.2"
rand_core = {version = "0.9.0-beta.0", features = ["std"]}
mouse-rs = "0.4.2"
pyo3 = {version = "0.23.1", features = ["auto-initialize"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
md5 = "0.7.0"
base64 = "0.22.1"
cbc = "0.1.2"
aes = "0.8.4"
cipher = "=0.4.4"
ego-tree = "0.9.0"
encoding = "0.2.33"
scraper = "0.21.0"
